Fix section with to 40%
- 500px did not fit properly on phones

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ section {
   text-align:center;
   justify-content: center;
   margin: auto;
-  max-width:500px;
+  max-width:40%;
 }
 
 p, h1 {
